...
            android:background="@color/transparent"
            android:clickable="true"
            android:padding="@dimen/standard_half_padding"
            android:src="@drawable/ic_cloud_sync_off"/>

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:clickable="true"
            android:paddingBottom="@dimen/standard_half_padding"
            android:paddingLeft="@dimen/standard_half_padding"
...
