...
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/prefs_folder_sync_remote_path_title"
                    android:textAppearance="?attr/textAppearanceListItem"/>

                <TextView
                    android:id="@+id/remote_folder_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="middle"
                    android:maxLines="2"
                    android:text="@string/placeholder_filename"
                    android:textColor="?android:attr/textColorSecondary"/>
...
