...
        <item quantity="one">%d user</item>
        <item quantity="other">%d users</item>
    </plurals>
    <string name="autoupload_custom_folder">Set up a custom folder</string>
    <string name="autoupload_create_new_custom_folder">Create new custom folder setup</string>
    <string name="autoupload_hide_folder">Hide folder</string>
    <string name="autoupload_configure">Configure</string>
    <string name="autoupload_delete_uploaded">Locally delete uploaded files</string>
    <string name="autoupload_delete_uploaded_notif_ticker">Local files deletion</string>
    <string name="autoupload_delete_uploaded_notif_started_title">Started to locally delete already uploaded files in background</string>
    <string name="autoupload_delete_uploaded_notif_ended_title">Locally deleted already uploaded files</string>
    <string name="autoupload_delete_uploaded_notif_error_title">Unable to locally delete already uploaded files</string>
    <string name="autoupload_delete_uploaded_notif_ended_content">Freed up %1$s removing %2$s across %3$s from %4$s.</string>
...
